# alahli

./: .gitignore  docker-compose.yml
backend/: .dockerignore  .env.example  .env.production  Dockerfile  manage.py  pyproject.toml  pytest.ini  requirements.txt
backend/apps/: conftest.py
backend/apps/accounts/: admin.py  apps.py  health.py  managers.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
backend/apps/analytics/: admin.py  apps.py  models.py  urls.py  views.py
backend/apps/athletes/: admin.py  apps.py  filters.py  models.py  parent_urls.py  registrations_urls.py  serializers.py  urls.py  views.py
backend/apps/departments/: admin.py  apps.py  groups_urls.py  models.py  serializers.py  sports_urls.py  urls.py  views.py
backend/apps/faqs/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/notifications/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
backend/apps/preferences/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/progress/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/store/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/subscriptions/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/config/: asgi.py  celery.py  sentry.py  urls.py  views.py  wsgi.py
backend/deploy/: nginx.conf
backend/requirements/: base.txt  dev.txt  prod.txt
backend/staticfiles/: staticfiles.json
frontend/: .gitignore  (+6 more)
(+326 files in other folders)
